added purpose and website link to README

--- a/README
+++ b/README
@@ -1,10 +1,11 @@
 # Code Quiz
 
 ## Purpose
-A website for players to fight virtual robots
+A website designed to quiz viewers with coding related questions
 
 ## Built With
 * HTML
+* CSS
 * JavaScript
 
 # Website
