added screen shot of deployed website to README

--- a/README
+++ b/README
@@ -11,5 +11,7 @@ A website designed to quiz viewers with coding related questions
 # Website
 https://millerdicarlo.github.io/code-quiz/
 
+![My Image](assets/coding-quiz-screen-snip.PNG)
+
 ## Contribution
 Made by Miller DiCarlo
